# azproxy

./: README.md  pyproject.toml  requirements.txt
azprox/: __init__.py  cli.py
azprox/core/: auth.py  config.py  deployer.py  health.py  regions.py
azprox/function_template/: function_app.py  host.json  requirements.txt
azprox/proxy/: interceptor.py  rotator.py  server.py
