[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azprox"
version = "0.1.0"
description = "Azure Functions IP rotation proxy — like proxychains but through Azure"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
authors = [{ name = "AzProx" }]
keywords = ["azure", "proxy", "ip-rotation", "red-team"]

dependencies = [
    "rich>=13.0.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-web>=7.0.0",
    "azure-mgmt-storage>=21.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]

[project.scripts]
azprox = "azprox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["azprox"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
